--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -680,8 +680,6 @@ skills:
     bullseye:
       enabled: true
       maxlevel: 5
-      cooldown: 9.0
-      cooldownDecreasePerLevel: 0.5
       cooldown: 8.0
       cooldownDecreasePerLevel: 1.0
       baseCurveDistance: 2.5
@@ -731,17 +729,9 @@ skills:
       maxlevel: 5
       cooldown: 13.0
       cooldownDecreasePerLevel: 1.5
-    longshot:
-      enabled: false
-      maxlevel: 1
     barrage:
       enabled: true
       maxlevel: 3
-    heavyarrows:
-      enabled: true
-      maxlevel: 3
-      energy: 55
-      energyDecreasePerLevel: 10.0
     markofthewolf:
       enabled: true
       maxlevel: 5
@@ -752,9 +742,6 @@ skills:
       maxlevel: 3
     huntersthrill:
       enabled: true
-      maxlevel: 3
-    precision:
-      enabled: false
       maxlevel: 3
     barbedarrows:
       enabled: true
@@ -771,16 +758,13 @@ skills:
     gambit:
       enabled: true
       maxlevel: 3
-    stormarrows:
+    tri-shot:
       enabled: true
       maxlevel: 5
       cooldown: 15.0
       cooldownDecreasePerLevel: 2.0
     vitalityspores:
       enabled: true
-      maxlevel: 3
-    sharpshooter:
-      enabled: false
       maxlevel: 3
     agility:
       enabled: true
