updated clans config

--- a/clans/src/main/resources/configs/config.yml
+++ b/clans/src/main/resources/configs/config.yml
@@ -62,6 +62,8 @@ clans:
     energyWarnLevel: 1.0
   dominance:
     enabled: true
+    fixedDominanceGain: true
+    dominanceGain: 5.0
   farming:
     baseY: 60
     allowOfflineGrowing: false
