--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -194,11 +194,12 @@ skills:
     vengeance:
       enabled: true
       maxlevel: 3
-      baseDamage: 0.75
-      damageIncreasePerLevel: 0.25
-      baseMaxDamage: 1.5
-      maxDamageIncreasePerLevel: 0.5
-      expirationTime: 6.0
+      baseDamage: 1.0
+      damageIncreasePerLevel: 1.0
+      baseMaxDamage: 2.0
+      baseMaxDamageIncreasePerLevel: 1.0
+      expirationTime: 5.0
+      maxDamageIncreasePerLevel: 1.0
     levelfield:
       enabled: true
       maxlevel: 3
@@ -680,127 +681,202 @@ skills:
     bullseye:
       enabled: true
       maxlevel: 5
-      cooldown: 8.0
-      cooldownDecreasePerLevel: 1.0
-      baseCurveDistance: 2.5
-      curveDistanceIncreasePerLevel: 0.5
+      cooldown: 9.0
+      cooldownDecreasePerLevel: 0.5
+      bonusCurveDistance: 2.5
+      bonusCurveDistanceIncreasePerLevel: 0.5
       baseBonusDamage: 2.0
-      bonusDamageIncreasePerLevel: 1.0
-      decayRate: 0.01
-      hitboxSize: 2.0
-      chargeDistance: 20
-      chargeDistanceIncreasePerLevel: 0
+      baseBonusDamageIncreasePerLevel: 1.0
+      baseCurveDistance: 0.5
     wolfspounce:
       enabled: true
       maxlevel: 5
       cooldown: 10.0
       cooldownDecreasePerLevel: 1.0
+      baseCharge: 75.0
+      chargeIncreasePerLevel: 25.0
+      baseDamage: 1.5
+      damageIncreasePerLevel: 1.5
+      baseSlowDuration: 3.0
+      slowDurationIncreasePerLevel: 0.0
+      slowStrength: 2
+      fallDamageLimit: 10.0
     stunningshot:
       enabled: false
       maxlevel: 5
       cooldown: 25.0
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 0.0
+      durationIncreasePerLevel: 0.25
     napalmarrow:
       enabled: true
       maxlevel: 5
       cooldown: 14.0
+      cooldownDecreasePerLevel: 1.0
+      baseBurnDuration: 1.0
+      burnDurationIncreasePerLevel: 0.5
+      baseDamage: 3.0
+      damageIncreasePerLevel: 0.0
+      baseDuration: 5.0
+      durationIncreasePerLevel: 1.0
+      velocityMultiplier: 0.4
+      damageDelay: 50
+      yComponentVelocityMultiplier: 0.3
+      numFlames: 50
     windburst:
-      enabled: true
-      maxlevel: 5
-      cooldown: 20.0
+      cooldown: 12.0
       cooldownDecreasePerLevel: 2.0
-    tethershot:
-      enabled: true
-      maxlevel: 5
-      cooldown: 18.0
-      cooldownDecreasePerLevel: 2.0
+      damage: 2.0
+      damageIncreasePerLevel: 1.0
+      radius: 3.0
+      radiusIncreasePerLevel: 0.0
+      velocity: 1.2
     ropedarrow:
       enabled: true
       maxlevel: 5
-      cooldown: 8.0
-      cooldownDecreasePerLevel: 1.0
+      cooldown: 6.0
+      cooldownDecreasePerLevel: 0.5
+      fallDamageLimit: 8.0
+      velocityStrength: 2.0
     levitatingshot:
       enabled: true
       maxlevel: 5
       cooldown: 14.0
       cooldownDecreasePerLevel: 2.0
-    featherfeet:
-      enabled: true
-      maxlevel: 5
-      cooldown: 20.0
-      cooldownDecreasePerLevel: 1.0
+      baseDuration: 1.0
+      durationIncreasePerLevel: 0.5
+      levitationStrength: 4
+      fallDamageLimit: 10.0
     pindown:
       enabled: true
       maxlevel: 5
       cooldown: 13.0
       cooldownDecreasePerLevel: 1.5
-    barrage:
+      baseDuration: 1.5
+      durationIncreasePerLevel: 1.5
+      slownessStrength: 4
+    longshot:
       enabled: true
       maxlevel: 3
-    markofthewolf:
-      enabled: true
-      maxlevel: 5
-      cooldown: 20.0
-      cooldownDecreasePerLevel: 2.0
-    wallkick:
-      enabled: true
-      maxlevel: 5
-      cooldown: 1.0
-      cooldownDecreasePerLevel: 0.0
-    hookshot:
+      deathMessageThreshold: 40.0
+      baseMaxDamage: 14.0
+      maxDamageIncreasePerLevel: 2.0
+      baseDamage: 0.4
+      damageIncreasePerLevel: 0.0
+      minDamage: 1.0
+    heavyarrows:
       enabled: true
       maxlevel: 3
+      energy: 55
+      basePushBack: 1.5
+      energyDecreasePerLevel: 5.0
+      baseDamage: 0.5
+      damageIncreasePerLevel: 0.5
+      velocityDecreasePercent: 0.25
+      velocityDecreasePercentDecreasePerLevel: 0.0
+    overcharge:
+      enabled: true
+      maxlevel: 5
+      baseExtraVelocity: 10.0
+      extraVelocityIncreasePerLevel: 0.0
+      baseDuration: 0.5
+      durationDecreasePerLevel: 0.1
+      baseMaxExtraVelocity: 100.0
+      maxExtraVelocityIncreasePerLevel: 0.0
+      baseKnockbackStrength: 10.0
+      knockbackStrengthIncreasePerLevel: 0.0
     huntersthrill:
       enabled: true
       maxlevel: 3
+      baseMaxTimeBetweenShots: 8.
+      maxConsecutiveHits: 2
+      maxConsecutiveHitsIncreasePerLevel: 1
+      maxTimeBetweenShotsIncreasePerLevel: 0.0
+    precision:
+      enabled: false
+      maxlevel: 3
+      baseDamage: 0.5
+      damageIncreasePerLevel: 0.5
     barbedarrows:
       enabled: true
       maxlevel: 3
-    kinetics:
-      enabled: true
-      maxlevel: 3
-    tactician:
-      enabled: true
-      maxlevel: 3
-    aerobatics:
-      enabled: true
-      maxlevel: 3
-    gambit:
-      enabled: true
-      maxlevel: 3
-    tri-shot:
-      enabled: true
+      baseDuration: 2.0
+      durationIncreasePerLevel: 0.5
+      slownessStrength: 2
+    volley:
+      enabled: false
       maxlevel: 5
       cooldown: 15.0
       cooldownDecreasePerLevel: 2.0
+      baseNumArrows: 10
+      numArrowsIncreasePerLevel: 0
+      damage: 8.0
+      baseDamage: 8.0
+      damageIncreasePerLevel: 0.0
     vitalityspores:
       enabled: true
       maxlevel: 3
-    agility:
+      baseDuration: 2.0
+      durationDecreasePerLevel: 1.0
+      regenerationStrength: 2
+    sharpshooter:
       enabled: true
       maxlevel: 3
+      maxTimeBetweenShots: 5.0
+      baseMaxConsecutiveHits: 2
+      maxConsecuteiveHitsIncreasePerLevel: 2
+      baseDamage: 1.0
+      damageIncreasePerLevel: 0.0
+      baseMaxTimeBetweenShots: 5.0
+      maxTimeBetweenShotsIncreasePerLevel: 0.0
+      maxConsecutiveHits: 2
+      maxConsecutiveHitsIncreasePerLevel: 2
+    agility:
+      enabled: true
+      maxlevel: 5
       cooldown: 30.0
-      cooldownDecreasePerLevel: 5.0
+      baseDuration: 3.0
+      canUseWhileSlowed: false
+      cooldownDecreasePerLevel: 1.0
+      durationIncreasePerLevel: 1.0
+      baseDamageReduction: 0.6
+      damageReductionIncreasePerLevel: 0.0
+      speedStrength: 2
     wolfsfury:
       enabled: true
       maxlevel: 3
       cooldown: 25.0
-      cooldownDecreasePerLevel: 5.0
+      baseDuration: 4.0
+      cooldownDecreasePerLevel: 7.5
+      durationIncreasePerLevel: 1.0
+      strengthLevel: 3
+      baseMissedSwings: 2
+      missedSwingsIncreasePerLevel: 0.0
+      strengthLevelIncreasePerLevel: 0
     disengage:
       enabled: true
       maxlevel: 5
-      cooldown: 18.0
+      cooldown: 14.0
+      baseSlowDuration: 2.0
       cooldownDecreasePerLevel: 2.0
-    explosivearrow:
-      enabled: true
-      maxlevel: 5
-      cooldown: 16.0
-      cooldownDecreasePerLevel: 2.0
+      slowDurationIncreasePerLevel: 1.0
+      baseChannelDuration: 1.25
+      channelDurationincreasePerLevel: 0.0
+      slowStrength: 4
     healingshot:
       enabled: true
       maxlevel: 5
       cooldown: 13.0
+      baseDuration: 3.0
+      durationIncreasePerLevel: 1.0
       cooldownDecreasePerLevel: 1.0
+      baseDirectHitRegenerationStrength: 3
+      increaseDirectHitRegenerationStrengthPerLevel: 0
+      baseNaturalRegenerationDisabledDuration: 5.0
+      increaseNaturalRegenerationDisabledDurationPerLevel: 1.0
+      baseRadius: 2.0
+      increaseRadiusPerLevel: 0.0
+      baseRegenerationStrength: 1
   warlock:
     bloodbarrier:
       enabled: true
