--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -710,6 +710,16 @@ skills:
       maxlevel: 5
       cooldown: 20.0
       cooldownDecreasePerLevel: 2.0
+    tethershot:
+      enabled: true
+      maxlevel: 5
+      cooldown: 18.0
+      cooldownDecreasePerLevel: 2.0
+    winddagger:
+      enabled: true
+      maxlevel: 5
+      cooldown: 6.0
+      cooldownDecreasePerLevel: 0.5
     ropedarrow:
       enabled: true
       maxlevel: 5
@@ -738,6 +748,11 @@ skills:
       maxlevel: 5
       cooldown: 20.0
       cooldownDecreasePerLevel: 2.0
+    wallkick:
+      enabled: true
+      maxlevel: 5
+      cooldown: 1.0
+      cooldownDecreasePerLevel: 0.0
     hookshot:
       enabled: true
       maxlevel: 3
