--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -308,8 +308,8 @@ skills:
       chargeIncreasePerLevel: 10.0
       baseDamage: 2.0
       damageIncreasePerLevel: 1.0
-      baseRange: 20.0
-      rangeIncreasePerLevel: 10.0
+      baseRange: 10.0
+      rangeIncreasePerLevel: 0.0
       energy: 30
       energyDecreasePerLevel: 2.0
       cooldownDecreasePerLevel: 0.5
@@ -319,18 +319,16 @@ skills:
       enabled: true
       cooldown: 12.0
       maxlevel: 5
-      damage: 8.0
-      slowDuration: 1.5
       cooldownDecreasePerLevel: 1.0
-      baseDamage: 8.0
-      damageIncreasePerLevel: 0.0
+      baseDamage: 6.0
+      damageIncreasePerLevel: 0.5
       baseSlowDuration: 1.5
       slowDurationIncreasePerLevel: 0.0
       slowStrength: 3
     inferno:
       enabled: true
       maxlevel: 3
-      cooldown: 4.0
+      cooldown: 3.0
       energy: 25
       energyDecreasePerLevel: 2.0
       baseFireDuration: 2.5
@@ -427,12 +425,11 @@ skills:
     blizzard:
       enabled: true
       maxlevel: 5
-      energy: 25
+      energy: 40
       baseSlowDuration: 2.0
       slowDurationIncreasePerLevel: 0.0
-      slowStrength: 3
-      slowDuration: 2.0
-      energyDecreasePerLevel: 1.0
+      slowStrength: 1
+      energyDecreasePerLevel: 2.0
     glacialblade:
       enabled: true
       maxlevel: 3
@@ -516,10 +513,12 @@ skills:
       maxlevel: 3
       cooldown: 20.0
       cooldownDecreasePerLevel: 3.0
-      enemyDamageReduction: 0.2
+      enemyDamageReduction: 0.20
+      radiusIncreasePerLevel: 2.0
       radius: 5.0
       infectionDuration: 5.0
-      duration: 5.0
+      cloudDuration: 4.0
+      cloudDurationIncreasePerLevel: 1.0
     rootingaxe:
       enabled: true
       maxlevel: 3
