--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -436,8 +436,6 @@ skills:
     glacialblade:
       enabled: true
       maxlevel: 3
-      energy: 20
-      energyDecreasePerLevel: 2.0
       cooldown: 2.0
       cooldownDecreasePerLevel: 0.5
       damage: 1.5
@@ -448,7 +446,7 @@ skills:
       energy: 28
       baseDamageReduction: 2.0
       damageReductionIncreasePerLevel: 0.5
-      baseEnergyReduction: 3.0
+      baseEnergyReduction: 2.0
       energyReductionDecreasePerLevel: 0.5
       slownessStrength: 3
       damageReduction: 5
@@ -478,14 +476,14 @@ skills:
       cooldownDecreasePerLevel: 1.0
     nullblade:
       enabled: true
-      maxlevel: 5
-      energy: 7
-      energyDecreasePerLevel: 2.0
+      maxlevel: 3
+      energySiphoned: 5.0
+      energySiphonedIncreasePerLevel: 5.0
     holylight:
       enabled: true
       maxlevel: 3
-      baseRadius: 8.0
-      radiusIncreasePerLevel: 1.0
+      baseRadius: 5.0
+      radiusIncreasePerLevel: 5.0
       baseDuration: 7.0
       durationIncreasePerLevel: 0.0
       regenerationStrength: 1
@@ -506,8 +504,8 @@ skills:
       durationIncreasePerLevel: 0.0
       resistanceStrength: 1
       slownessStrength: 1
-      minRadius: 2
-      duration: 2.0
+      slowDuration: 2.0
+      slowDurationIncreasePerLevel: 0.5
       energyDecreasePerLevel: 4.0
       energyStartCost: 10.0
       energyStartCostDecreasePerLevel: 0.0
