--- a/clans/src/main/resources/paper-plugin.yml
+++ b/clans/src/main/resources/paper-plugin.yml
@@ -9,8 +9,24 @@ dependencies:
       load: BEFORE
       required: true
       join-classpath: true
+    Champions:
+      load: BEFORE
+      required: false
+      join-classpath: true
+    Progression:
+      load: BEFORE
+      required: false
+      join-classpath: true
   server:
     Core:
       load: BEFORE
       required: true
+      join-classpath: true
+    Champions:
+      load: BEFORE
+      required: false
+      join-classpath: true
+    Progression:
+      load: BEFORE
+      required: false
       join-classpath: true
