--- a/champions/src/main/resources/configs/weapons/legendaries.yml
+++ b/champions/src/main/resources/configs/weapons/legendaries.yml
@@ -93,3 +93,7 @@ thunderclap_aegis:
   collidePulseRadius: 7.0
   energyOnCollide: 12.5
   chargeDamage: 7.0
+runed_pickaxe:
+  enabled: true
+  baseDamage: 1.0
+  miningSpeed: 30.0
