Auction house progress

--- a/clans/src/main/resources/configs/config.yml
+++ b/clans/src/main/resources/configs/config.yml
@@ -348,6 +348,18 @@ tips:
     enabled: true
     categoryWeight: 2
     weight: 1
+  daily:
+    enabled: false
+    categoryWeight: 10
+    weight: 1
+  clanpillage:
+    enabled: true
+    categoryWeight: 2
+    weight: 1
+  clancore:
+    enabled: true
+    categoryWeight: 1
+    weight: 2
 mining:
   faster-ores-perk:
     level: 250
