--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -144,7 +144,7 @@ skills:
       enabled: true
       maxlevel: 3
       cooldown: 28.0
-      percentHealthRecovered: 0.25
+      healthRecovered: 4.0
       duration: 2.0
       canUseWhileSlowed: false
       cooldownDecreasePerLevel: 2.0
