Added a cap on the number of blocks one can fell in a single swing of tree feller for compatability

--- a/progression/src/main/resources/configs/professions/woodcutting.yml
+++ b/progression/src/main/resources/configs/professions/woodcutting.yml
@@ -8,6 +8,7 @@ skills:
     maxlevel: 20
     cooldown: 20.0
     cooldownDecreasePerLevel: 1.0
+    maxBlocksThatCanBeFelled: 10
   forest_flourisher:
     enabled: true
     maxlevel: 250
