--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -610,16 +610,16 @@ skills:
     takedown:
       enabled: true
       maxlevel: 5
-      cooldown: 25.0
+      cooldown: 16.0
       damage: 5.0
-      cooldownDecreasePerLevel: 2.0
+      cooldownDecreasePerLevel: 1.0
       baseDuration: 1.0
-      durationIncreasePerLevel: 1.0
+      durationIncreasePerLevel: 0.5
       slownessStrength: 4
       recoilDamage: 1.5
       recoilDamageIncreasePerLevel: 0.5
       damageIncreasePerLevel: 1.0
-      velocityStrength: 1.5
+      velocityStrength: 1.2
       fallDamageLimit: 4.0
     unstoppableforce:
       enabled: true
@@ -634,23 +634,22 @@ skills:
     stampede:
       enabled: true
       maxlevel: 3
-      durationPerStack: 6.0
+      durationPerStack: 5.0
       damage: 0.5
       damageIncreasePerLevel: 0.5
       durationPerStackDecreasePerLevel: 1.0
-      knockbackIncreasePerLevel: 0.5
-      knockback: 0.5
+      knockbackIncreasePerLevel: 0.0
+      knockback: 0.25
       maxSpeedStrength: 3
     threateningshout:
       enabled: true
       maxlevel: 5
-      cooldown: 12.0
-      damageRadius: 3.0
-      vulnerabilityRadius: 2.0
+      cooldown: 20.0
+      radius: 3.0
       cooldownDecreasePerLevel: 1.0
       baseDuration: 3.0
-      durationIncreasePerLevel: 0.5
-      vulnerabilityStrength: 3
+      durationIncreasePerLevel: 1.0
+      vulnerabilityStrength: 2
       tickDelay: 12
       damage: 5.0
       damageIncreasePerLevel: 1.0
