Created Tree Compactor item

--- a/progression/src/main/resources/configs/config.yml
+++ b/progression/src/main/resources/configs/config.yml
@@ -447,3 +447,6 @@ command:
   woodcutting:
     enabled: true
     requiredRank: ADMIN
+    treecompactor:
+      enabled: true
+      requiredRank: ADMIN
