--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -696,113 +696,253 @@ skills:
       maxlevel: 5
       cooldown: 10.0
       cooldownDecreasePerLevel: 1.0
-    stunningshot:
-      enabled: false
-      maxlevel: 5
-      cooldown: 25.0
-      cooldownDecreasePerLevel: 1.0
+      baseCharge: 75.0
+      chargeIncreasePerLevel: 25.0
+      baseDamage: 1.5
+      damageIncreasePerLevel: 1.5
+      baseSlowDuration: 3.0
+      slowDurationIncreasePerLevel: 0.0
+      slowStrength: 2
+      fallDamageLimit: 10.0
     napalmarrow:
       enabled: true
       maxlevel: 5
       cooldown: 20.0
+      cooldownDecreasePerLevel: 1.0
+      baseBurnDuration: 1.0
+      burnDurationIncreasePerLevel: 0.5
+      baseDamage: 1.0
+      damageIncreasePerLevel: 0.0
+      baseDuration: 3.0
+      durationIncreasePerLevel: 1.0
+      velocityMultiplier: 0.4
+      yComponentVelocityMultiplier: 1.0
+      damageDelay: 50
+      numflames: 75
     windburst:
       enabled: true
       maxlevel: 5
       cooldown: 18.0
       cooldownDecreasePerLevel: 2.0
+      damage: 2.0
+      damageIncreasePerLevel: 1.0
+      radius: 4.0
+      velocity: 1.0
+      selfVelocity: 0.5
+      radiusIncreasePerLevel: 0.0
+      particleSpeed: 0.0
+      burstDuration: 5
+      yAdd: 0.6
+      yMax: 0.8
+      yAddSelf: 0.8
+      yMaxSelf: 0.8
+      fallDamageLimit: 10.0
+      ySetSelf: 1.0
+      ySet: 0.0
     tethershot:
       enabled: true
       maxlevel: 5
       cooldown: 18.0
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 1.5
+      durationIncreasePerLevel: 0.5
+      radius: 5.0
+      escapeDistance: 2.0
+      damageIncreasePerLevel: 1.0
+      damage: 6.0
+      slowDurationIncreasePerLevel: 0.0
+      slowDuration: 4.0
     winddagger:
       enabled: true
       maxlevel: 5
       cooldown: 7.0
       cooldownDecreasePerLevel: 0.5
+      baseDamage: 3.0
+      damageIncreasePerLevel: 0.25
+      blocksPerSecond: 30.0
+      duration: 1.0
+      rotationX: 90.0
+      rotationY: 45.0
+      rotationZ: 0.0
+      hitboxSize: 0.6
+      xSize: 0.5
+      ySize: 0.5
+      zSize: 1.0
+      cooldownReduction: 1.0
+      cooldownReductionIncreasePerLevel: 0.0
     ropedarrow:
       enabled: true
       maxlevel: 5
       cooldown: 8.0
       cooldownDecreasePerLevel: 1.0
-    levitatingshot:
-      enabled: true
-      maxlevel: 5
-      cooldown: 14.0
-      cooldownDecreasePerLevel: 2.0
+      fallDamageLimit: 8.0
+      velocityStrength: 2.0
     featherfeet:
       enabled: true
       maxlevel: 5
       cooldown: 20.0
       cooldownDecreasePerLevel: 1.0
+      damage: 2.0
+      damageIncreasePerLevel: 1.0
+      jumpBoostStrength: 5
+      jumpBoostStrengthIncreasePerLevel: 0
+      duration: 4.0
+      durationIncreasePerLevel: 0.5
+      damageDelay: 0.5
+      slowStrength: 2
+      slowStrengthIncreasePerLevel: 0
+      slowDuration: 2.0
+      slowDurationIncreasePerLevel: 0.0
     longshot:
       enabled: true
       maxlevel: 3
+      baseMaxDamage: 14.0
+      maxDamageIncreasePerLevel: 3.0
+      minDamage: 1.0
+      maxDistance: 64.0
+      deathMessageThreshold: 32.0
     barrage:
       enabled: false
       maxlevel: 3
+      baseCharge: 40.0
+      chargeIncreasePerLevel: 0.0
+      arrowDamage: 1.0
+      numArrows: 3
+      numArrowsIncreasePerLevel: 3
+      arrowDamageIncreasePerLevel: 0.0
+      spread: 3.0
     sharpshooter:
       enabled: true
       maxlevel: 3
+      duration: 5.0
+      maxConsecutiveHits: 5
+      baseDamage: 1.0
+      damageIncreasePerLevel: 0.25
+      maxConsecutiveHitsIncreasePerLevel: 0
     markofthewolf:
       enabled: true
       maxlevel: 5
       cooldown: 20.0
       cooldownDecreasePerLevel: 2.0
-    hookshot:
-      enabled: false
-      maxlevel: 3
+      baseDuration: 2.0
+      durationIncreasePerLevel: 1.5
+      bleedDuration: 3.0
+      bleedDurationIncreasePerLevel: 0.0
     huntersthrill:
       enabled: true
       maxlevel: 3
+      speedDuration: 3.0
+      maxSpeedLevel: 2
+      maxSpeedLevelIncreasePerLevel: 1
+      speedDurationIncreasePerLevel: 0.0
     barbedarrows:
       enabled: true
       maxlevel: 3
+      baseDamage: 1.5
+      damageIncreasePerLevel: 0.5
+      damageResetTime: 2.0
     kinetics:
       enabled: true
       maxlevel: 3
+      velocityRestTime: 4.0
+      storedVelocityCount: 1
+      storedVelocityCountIncreasePerLevel: 1
+      fallDamageLimit: 4.0
     tactician:
       enabled: true
       maxlevel: 3
+      damage: 0.8
+      damageIncreasePerLevel: 0.2
+      hitboxSize: 1.0
+      slowDuration: 0.5
+      slowDurationIncreasePerLevel: 0.0
+      slowStrength: 1
+      slowStrengthIncreasePerLevel: 0
+      headOffset: 1.2
     aerobatics:
       enabled: true
       maxlevel: 3
-    gambit:
-      enabled: true
-      maxlevel: 3
+      damage: 1.0
+      damageIncreasePerLevel: 0.5
     tri-shot:
       enabled: true
       maxlevel: 5
       cooldown: 15.0
       cooldownDecreasePerLevel: 2.0
+      baseNumTridents: 3
+      numTridentsIncreasePerLevel: 0
+      baseDamage: 1.0
+      damageIncreasePerLevel: 0.75
+      tridentDelay: 0.2
     vitalityspores:
       enabled: true
       maxlevel: 3
+      maxSporeCharges: 2
+      maxSporeChargesIncreasePerLevel: 1
+      sporeRemovalTime: 5.0
+      healingIncreasePerLevel: 0.0
+      healing: 1.5
     agility:
       enabled: true
       maxlevel: 5
       cooldown: 20.0
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 3.0
+      durationIncreasePerLevel: 1.0
+      baseDamageReduction: 0.60
+      damageReductionIncreasePerLevel: 0.0
+      speedStrength: 3
+      baseMissedSwings: 1.0
+      missedSwingsIncreasePerLevel: 0.0
     wolfsfury:
       enabled: true
       maxlevel: 3
       cooldown: 25.0
       cooldownDecreasePerLevel: 5.0
+      baseDuration: 5.0
+      durationIncreasePerLevel: 0.0
+      baseMissedSwings: 2
+      missedSwingsIncreasePerLevel: 1.0
+      strengthLevel: 2
+      strengthLevelIncreasePerLevel: 0
     disengage:
       enabled: true
       maxlevel: 5
       cooldown: 16.0
       cooldownDecreasePerLevel: 2.0
+      baseSlowDuration: 2.0
+      slowDurationIncreasePerLevel: 1.0
+      baseChannelDuration: 1.25
+      channelDurationIncreasePerLevel: 0.0
+      slowStrength: 2
+      slowStrengthIncreasePerLevel: 0
+      velocity: 2.2
+      velocityIncreasePerLevel: 0.0
+      fallDamageLimit: 15.0
     explosivearrow:
       enabled: true
       maxlevel: 5
       cooldown: 16.0
       cooldownDecreasePerLevel: 2.0
+      baseDamage: 2.0
+      damageIncreasePerLevel: 0.5
+      valocityMultiplier: 1.2
+      radiusIncreasePerLevel: 0.0
+      radius: 4.0
+      groundBoost: true
+      yAdd: 0.8
+      yMax: 0.8
     bioticshot:
       enabled: true
       maxlevel: 5
       cooldown: 18.0
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 4.0
+      durationIncreasePerLevel: 1.0
+      baseRegenerationStrength: 3
+      increaseRegenerationStrengthPerLevel: 0
+      baseNaturalRegenerationDisabledDuration: 3.0
+      increaseNaturalRegenerationDisabledDurationPerLevel: 0.5
   warlock:
     bloodbarrier:
       enabled: true
