--- a/clans/src/main/resources/paper-plugin.yml
+++ b/clans/src/main/resources/paper-plugin.yml
@@ -17,6 +17,10 @@ dependencies:
       load: BEFORE
       required: false
       join-classpath: true
+    Shops:
+      load: BEFORE
+      required: false
+      join-classpath: true
   server:
     Core:
       load: BEFORE
@@ -27,6 +31,10 @@ dependencies:
       required: false
       join-classpath: true
     Progression:
+      load: BEFORE
+      required: false
+      join-classpath: true
+    Shops:
       load: BEFORE
       required: false
       join-classpath: true
