Global Passive Changes (#989)
* Changed base value to 4 and level scaling to 4

* Changed base level to 40% and changed level scaling to 20%

* Added Tranquility

* Rename Tranquility

* Update Global Passives

* Update Tranquility.java

* Update skills.yml

* Update BreakFall.java

* Update Resistance.java

* Update skills.yml

* Update Tranquility.java

* Update Tranquility.java

---------

Co-authored-by: Braulio <40250304+braulio-dev@users.noreply.github.com>

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -1052,8 +1052,8 @@ skills:
     breakfall:
       enabled: true
       maxlevel: 3
-      baseDamageReduction: 2.0
-      damageReductionIncreasePerLevel: 2.0
+      baseDamageReduction: 3.0
+      damageReductionIncreasePerLevel: 3.0
     fastrecovery:
       enabled: true
       maxlevel: 3
@@ -1062,8 +1062,8 @@ skills:
     resistance:
       enabled: true
       maxlevel: 3
-      baseDurationReduction: 20.0
-      durationReductionPerLevel: 10.0
+      baseDurationReduction: 30.0
+      durationReductionPerLevel: 15.0
     swim:
       enabled: false
       maxlevel: 5
@@ -1072,3 +1072,9 @@ skills:
       internalCooldown: 0.35
       canUseInLiquid: true
       energyDecreasePerLevel: 2.0
+    tranquility:
+      enabled: true
+      maxlevel: 3
+      regenerationStrength: 1
+      timeOutOfCombat: 15.0
+      timeOutOfCombatDecreasePerLevel: 5.0
