--- a/champions/src/main/resources/configs/weapons/standard.yml
+++ b/champions/src/main/resources/configs/weapons/standard.yml
@@ -30,10 +30,10 @@ energy_elixir:
   enabled: true
   cooldown: 12.0
   energyRegen: 0.5
-water_bottle:
-  enabled: true
+purification_potion:
+  enabled: false
   cooldown: 10.0
-  duration: 3.0
+  duration: 1.5
 rabbit_stew:
   enabled: true
   cooldown: 15.0
