--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -784,6 +784,8 @@ skills:
       baseDamage: 1.5
       damageIncreasePerLevel: 0.5
       damageResetTime: 2.0
+      slownessStrength: 1
+      slowDuration: 2.0
     volley:
       enabled: true
       maxlevel: 5
