--- a/champions/src/main/resources/configs/weapons/standard.yml
+++ b/champions/src/main/resources/configs/weapons/standard.yml
@@ -34,6 +34,15 @@ purification_potion:
   enabled: false
   cooldown: 10.0
   duration: 1.5
+rabbit_stew:
+  enabled: true
+  cooldown: 15.0
+  duration: 7.0
+  level: 1
+suspicious_stew:
+  enabled: true
+  cooldown: 10.0
+  duration: 5.0
 ranger_boots:
   enabled: true
 power_sword:
